[package]
name = "mini-base"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6.3", features = [  "runtime-tokio-native-tls", "sqlite", "mysql", "time", "json", "chrono", "uuid" ] }
pbkdf2 = "0.12.1"
axum = "0.6.12"
cursive = { git = "https://github.com/gyscos/cursive" }
nom = "7.1.3"
futures = "0.3.28"
serde_json = "1.0.96"
serde = "1.0.160"
tokio = { version="1.27.0", features= [ "full" ] }
axum-server = "0.4.7"
chrono = { version= "0.4.24", features = ["serde"] }
cookie = "0.17.0"
digest = "0.10.6"
axum-extra = { version = "0.7.4", features = ["cookie"] }
tower-http = { version = "0.4.0", features = ["cors"] }
jsonwebtoken = "8.3.0"
