[package]
name = "mini-base"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "sqlite",
  "mysql",
  "time",
  "json",
  "chrono",
  "uuid",
] }
axum = "0.7.4"
cursive = { git = "https://github.com/gyscos/cursive" }
nom = "7.1.3"
futures = "0.3.30"
serde_json = "1.0.113"
serde = "1.0.196"
tokio = { version = "1.36.0", features = ["full"] }
chrono = { version = "0.4.34", features = ["serde"] }
cookie = "0.18.0"
digest = "0.10.7"
axum-extra = { version = "0.9.2", features = ["cookie", "multipart"] }
tower-http = { version = "0.5.1", features = ["cors"] }
jsonwebtoken = "9.2.0"
sha2 = "0.10.8"
uuid = { version = "1.7.0", features = ["v4"] }
enum-iterator = "1.5.0"
flexi_logger = "0.27.4"
log = "0.4.20"
mime = "0.3.17"
mime_guess = "2.0.4"
jfs = "0.9.0"
axum-server = "0.6.0"
tower-cookies = "0.10.0"
tower = "0.4.13"
